# arena-simulation-setup

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
entities/robots/cob4/: display_robot.launch.py  scan_unifier.launch.py
launch/mbf/mbf_nav/: costmap_nav.launch.py
robot/agvota/urdf/: agv_base.urdf.xacro  agv_ir.urdf.xacro
robot/buddy/configs/costmaps/: costmap_common_params.yaml
robot/buddy/configs/mbf/: mpc_local_planner_params.yaml
robot/buddy/urdf/: VLP-1.urdf.xacro  const.xacro  sick_scan.urdf.xacro
robot/cob4/cob_description/urdf/sensors/: rplidar.gazebo.xacro  sick_s300_laser.gazebo.xacro
robot/dingo/urdf/accessories/: hokuyo_ust10.urdf.xacro
robot/go1/urdf/: lidar.xacro
robot/jackal/urdf/accessories/: hokuyo_ust10.urdf.xacro
robot/laikago/urdf/: lidar.xacro
robot/ridgeback/urdf/accessories/: hokuyo_ust-10lx_mount.urdf.xacro
robot/rto/urdf/sensors/: hokuyo.urdf.xacro
worlds/arena_hospital_large/worlds/: arena_hospital_large.world
worlds/floor/worlds/: floor.world
worlds/ignc/worlds/: ignc.world
worlds/map7/worlds/: map7.world
worlds/map_empty/worlds/: map_empty.world
worlds/map_empty_small/worlds/: map_empty_small.world
worlds/outdoor/worlds/: outdoor.world
